--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 #MySQL properties
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/ticket_app?serverTimeZone=UTC
-db.user=root
-db.password=qwerty12345
+db.driver=YOUR_DRIVER
+db.url=YOUR_DATABASE_URL
+db.user=YOUR_USER
+db.password=YOUR_PASSWORD
 
 #Hibernate properties
 hibernate.show_sql=true
